# pygobject-2-28

./: Makefile.am  autogen.sh  configure.ac
gi/: Makefile.am
gio/: Makefile.am
glib/: Makefile.am  pygmainloop.c
gobject/: Makefile.am
m4/: jhflags.m4  python.m4
tests/: Makefile.am  test_properties.py
